@@ -28,7 +28,7 @@
 #include "version.h"
 
 #ifdef KEYSYM_RESOURCE
-#include "keyboard.h"
+# include "keyboard.h"
 #endif
 
 /* place holders used for parsing command-line options */
@@ -36,7 +36,7 @@
 #define Optflag_Boolean              0x80000000UL
 #define Optflag_mask                 0x3fffffffUL
 
-/*{{{ monolithic option/resource structure: */
+/* monolithic option/resource structure: */
 /*
  * `string' options MUST have a usage argument
  * `switch' and `boolean' options have no argument
@@ -268,7 +268,6 @@ optList[] = {
 #undef RSTRG
 #undef SWCH
 #undef BOOL
-/*}}} */
 
 static const char releasestring[] = "rxvt-unicode (" RXVTNAME ") v" VERSION " - released: " DATE "\n";
 static const char optionsstring[] = "options: "
@@ -409,7 +408,7 @@ rxvt_usage (int type)
         for (col = 1, i = 0; i < optList_size; i++)
           if (optList[i].desc != NULL)
             {
-              int             len = 0;
+              int len = 0;
 
               if (!optList_isBool (i))
                 {
@@ -486,7 +485,7 @@ rxvt_usage (int type)
 void
 rxvt_term::get_options (int argc, const char *const *argv)
 {
-  int             i, bad_option = 0;
+  int i, bad_option = 0;
 
   for (i = 1; i < argc; i++)
     {
@@ -543,10 +542,12 @@ rxvt_term::get_options (int argc, const char *const *argv)
                */
 
               if (optList[entry].doff != -1)
-                rs[optList[entry].doff] = flag == resval_on && argv[i+1]
-                                          ? argv[++i] : resval_undef;
+                {
+                  if (flag == resval_on && !argv [i+1])
+                    rxvt_fatal ("option '%s' needs an argument, aborting.\n", argv [i]);
 
-              if (optList[entry].doff == Rs_color + Color_tint) printf ("doff %d is %s\n",optList[entry].doff,rs[optList[entry].doff]);//D
+                  rs[optList[entry].doff] = flag == resval_on ? argv[++i] : resval_undef;
+                }
             }
           else
             {		/* boolean value */
